--- a/src/VIEW/Psq_UsuarioVIEW.form
+++ b/src/VIEW/Psq_UsuarioVIEW.form
@@ -139,6 +139,7 @@
             <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tblUsuarioKeyPressed"/>
           </Events>
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="tblUsuario = new javax.swing.JTable()&#xa;{&#xa;    public boolean isCellEditable(int rollIndex, int colIndex){&#xa;        return false;&#xa;    }&#xa;};"/>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
